# comp_model_v2

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
.codex-skill-edits/review-pull-request/: SKILL.md
.github/workflows/: ci.yml
docs/: kernel_naming_convention.md  mental_model.md
docs/plans/: plan_01_kernel_schema_validation.md  plan_02_schema_surface.md  plan_03_acceptance_tests.md  plan_04_examples.md  plan_05_readme.md
example/: README.md  __init__.py  asocial_q_learning.py  asocial_qlearning_mle.py  asocial_qlearning_mle_recovery.py  asocial_qlearning_mle_within_subject.py  asocial_qlearning_stan.py  asocial_qlearning_stan_hierarchical_within_subject.py  asocial_qlearning_stan_no_pooling.py  asocial_qlearning_stan_per_subject_recovery.py  asocial_qlearning_stan_recovery.py  asocial_qlearning_stan_within_subject.py  check_block_recovery.py  parameter_recovery_within_subject.py  social_observed_outcome_q_stan_recovery.py  social_post_outcome_social_q_mle.py  social_post_outcome_social_q_stan.py  social_pre_choice_social_q_mle.py  social_pre_choice_social_q_stan.py
example/asocial_qlearning/: mle.py  mle_recovery.py  mle_within_subject.py  stan.py  stan_hierarchical_within_subject.py  stan_no_pooling.py  stan_per_subject_recovery.py  stan_recovery.py  stan_within_subject.py
example/asocial_rl/: mle.py  mle_recovery.py  mle_within_subject.py  stan.py  stan_hierarchical_within_subject.py  stan_per_subject_recovery.py  stan_recovery.py  stan_within_subject.py
example/models/: README.md
tests/: conftest.py  test_smoke.py
(+397 files in other folders)
